--- a/app.ini
+++ b/app.ini
@@ -21,13 +21,17 @@ ROOT_URL = http://10.1.234.68:3000/
 
 [mailer]
 ENABLED = true
-HOST = smtp.asiainfo.com
+HOST = mail.asiainfo.com
 USER = xienan
 PASSWD = Fornet6^
 
 [service]
 REGISTER_EMAIL_CONFIRM = true
 ENABLE_NOTIFY_MAIL = false
+DISABLE_REGISTRATION = true
+SHOW_REGISTRATION_BUTTON = false
+ENABLE_CACHE_AVATAR = false
+REQUIRE_SIGNIN_VIEW = true
 
 [session]
 PROVIDER = memory
@@ -37,12 +41,10 @@ MODE = file
 LEVEL = Info
 
 [security]
-INSTALL_LOCK = false
-SECRET_KEY = 6MSmv7J0nnw6q39
-DISABLE_REGISTRATION = true
-SHOW_REGISTRATION_BUTTON = false
-ENABLE_CACHE_AVATAR = false
+INSTALL_LOCK = true
+SECRET_KEY = ZtOHQ0gyXukfMr6
 
 [picture]
 GRAVATAR_SOURCE = duoshuo
+DISABLE_GRAVATAR = true
 
