--- a/app.ini
+++ b/app.ini
@@ -8,16 +8,16 @@ ROOT = /git/repositories
 DB_TYPE = mysql
 HOST = 127.0.0.1:3306
 NAME = gogs
-USER = root
-PASSWD = mariadb_admin
+USER = gogs
+PASSWD = gogs_admin
 SSL_MODE = disable
 PATH = data/gogs.db
 
 [server]
 PROTOCOL = http
-DOMAIN = 10.1.234.68
+DOMAIN = cmcssm.asiainfo.com
 HTTP_PORT = 3000
-ROOT_URL = http://10.1.234.68:3000/
+ROOT_URL = http://cmcssm.asiainfo.com/gogs/
 
 [mailer]
 ENABLED = true
