--- a/nginx.conf
+++ b/nginx.conf
@@ -38,20 +38,37 @@ http {
         listen       80 default_server;
         listen       [::]:80 default_server;
         #server_name  _;
-        server_name www.aissm.com;
-        #root         /usr/share/nginx/html;
+        #server_name  cmcssm.asiainfo.com;
+        server_name git.crystalnetwork.us;
+        root         /usr/share/nginx/html;
 
         # Load configuration files for the default server block.
         include /etc/nginx/default.d/*.conf;
 
-        #location / {
-        #}
+        location /gogs/ {
+            proxy_pass        http://10.1.234.28:3000/;
+        }
 
-        location / {
-            #rewrite ^(/gogs/.*)/.*/ $1/ permanent;
-            proxy_pass        http://10.1.234.28:3000;
-            proxy_set_header X-Forwarded-For $remote_addr;
-            #proxy_redirect    http://www.aissm.com/gogs/ /;
+        location /ssm {
+            proxy_pass        http://10.1.234.29:8080/ssm;
+            proxy_set_header  X-Forwarded-For $remote_addr;
+        }
+
+        location /jenkins {
+            proxy_pass        http://127.0.0.1:8080/jenkins;
+            proxy_set_header  X-Forwarded-For $remote_addr;
+        }
+
+        location /nexus {
+            proxy_pass        http://127.0.0.1:8081;
+            proxy_set_header  Host $host;
+            proxy_set_header  X-Real-IP $remote_addr;
+            proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
+        location /sonarqube {
+            proxy_pass        http://127.0.0.1:8082;
+            proxy_set_header  X-Forwarded-For $remote_addr;
         }
 
         error_page 404 /404.html;
@@ -60,6 +77,14 @@ http {
 
         error_page 500 502 503 504 /50x.html;
             location = /50x.html {
+        }
+    }
+
+    server {
+        listen       9002;
+        location / {
+            proxy_pass        http://10.1.234.28:3000;
+            proxy_set_header X-Forwarded-For $remote_addr;
         }
     }
 }
