add run machine

--- a/ports.conf
+++ b/ports.conf
@@ -1,6 +1,7 @@
 
 10.1.234.28 80		#svnadmin only from 10.1.234.30
 10.1.234.28 3000	#gogs only from 10.1.234.30
+10.1.234.28 3690	#svnserve
 10.1.234.28 3306	#mysql
 10.1.234.29 8080	#ssm only from 10.1.234.30
 10.1.234.30 80		#nginx
