--- a/ports.conf
+++ b/ports.conf
@@ -1,5 +1,5 @@
 
-10.1.234.28 80		#svnadmin only from 10.1.234.30
+10.1.234.28 8080	#scm manager only from 10.1.234.30
 10.1.234.28 3000	#gogs only from 10.1.234.30
 10.1.234.28 3690	#svnserve
 10.1.234.28 3306	#mysql
