--- a/ports.conf
+++ b/ports.conf
@@ -15,5 +15,6 @@
 10.1.234.30 8081	#nexus sonartype only from 127.0.0.1
 10.1.234.30 8082	#sonarqube only from 127.0.0.1
 10.1.234.30 8083	#ssm production only from 127.0.0.1
+10.1.234.30 8100	#openoffice server
 10.1.234.30 9001	#ssh
 
