--- a/app.ini
+++ b/app.ini
@@ -22,8 +22,8 @@ ROOT_URL = http://cmcssm.asiainfo.com/gogs/
 [mailer]
 ENABLED = true
 HOST = mail.asiainfo.com
-USER = xienan
-PASSWD = Fornet6^
+USER = cmcssm
+PASSWD = 15!cyhl
 
 [service]
 REGISTER_EMAIL_CONFIRM = true
