--- a/ports.conf
+++ b/ports.conf
@@ -12,6 +12,8 @@
 10.1.234.30 22		# ssh
 10.1.234.30 80		# nginx, the public port to provide all services
 10.1.234.30 8080	# jenkins only from 127.0.0.1
+10.1.234.30 8001	# sonar.search.port with 8082
+10.1.234.30 8002	# sonar.search.port with 8086
 10.1.234.30 8081	# nexus sonatype only from 127.0.0.1
 10.1.234.30 8082	# sonarqube only from 127.0.0.1
 10.1.234.30 8083	# ssm production only from 127.0.0.1
