--- a/ports.conf
+++ b/ports.conf
@@ -20,4 +20,5 @@
 10.1.234.30 8084	# sonarqube 3.7.4 only from 127.0.0.1
 10.1.234.30 8100	# openoffice server
 10.1.234.30 9001	# ssh
+10.1.234.30 9092	# sonar h2 database
 
