--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -38,8 +38,7 @@ http {
         listen       80 default_server;
         listen       [::]:80 default_server;
         #server_name  _;
-        #server_name  cmcssm.asiainfo.com;
-        server_name git.crystalnetwork.us;
+        server_name  cmcssm.asiainfo.com;
         root         /usr/share/nginx/html;
 
         # Load configuration files for the default server block.
@@ -47,16 +46,47 @@ http {
 
         location /gogs/ {
             proxy_pass        http://10.1.234.28:3000/;
+            client_max_body_size       20m;
+            client_body_buffer_size    128k;
         }
 
-        location /ssm {
-            proxy_pass        http://10.1.234.29:8080/ssm;
-            proxy_set_header  X-Forwarded-For $remote_addr;
+        location /scm {
+            proxy_set_header X-Real-IP         $remote_addr;
+            proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Host $http_host;
+            client_max_body_size       20m;
+            client_body_buffer_size    128k;
+            proxy_pass       http://10.1.234.28:8080;
+        }
+
+        location /viewvc {
+            add_header Cache-Control no-store;
+            proxy_pass       http://10.1.234.28:8081/viewvc;
         }
 
         location /jenkins {
+            sendfile off;
             proxy_pass        http://127.0.0.1:8080/jenkins;
-            proxy_set_header  X-Forwarded-For $remote_addr;
+            proxy_redirect     default;
+
+            proxy_set_header   Host             $host;
+            proxy_set_header   X-Real-IP        $remote_addr;
+            proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+            proxy_max_temp_file_size 0;
+
+            #this is the maximum upload size
+            client_max_body_size       10m;
+            client_body_buffer_size    128k;
+
+            proxy_connect_timeout      90;
+            proxy_send_timeout         90;
+            proxy_read_timeout         90;
+
+            proxy_buffer_size          4k;
+            proxy_buffers              4 32k;
+            proxy_busy_buffers_size    64k;
+            proxy_temp_file_write_size 64k;
         }
 
         location /nexus {
@@ -71,20 +101,37 @@ http {
             proxy_set_header  X-Forwarded-For $remote_addr;
         }
 
+        location /ssm {
+            proxy_pass        http://127.0.0.1:8083/ssm;
+            proxy_set_header  X-Forwarded-For $remote_addr;
+        }
+
+        location /sonar374 {
+            proxy_pass        http://127.0.0.1:8084;
+            proxy_set_header  X-Forwarded-For $remote_addr;
+        }
+
+	location /sonarcheck {
+            proxy_pass        http://127.0.0.1:8086;
+            proxy_set_header  X-Forwarded-For $remote_addr;
+	}
+
+        location /DocSys {
+            proxy_pass        http://127.0.0.1:8085;
+            proxy_set_header  X-Forwarded-For $remote_addr;
+        }
+
+        location /ssmtest {
+            proxy_pass        http://10.1.234.29:8080/ssmtest;
+            proxy_set_header  X-Forwarded-For $remote_addr;
+        }
+
         error_page 404 /404.html;
             location = /40x.html {
         }
 
         error_page 500 502 503 504 /50x.html;
             location = /50x.html {
-        }
-    }
-
-    server {
-        listen       9002;
-        location / {
-            proxy_pass        http://10.1.234.28:3000;
-            proxy_set_header X-Forwarded-For $remote_addr;
         }
     }
 }
