--- a/ports.conf
+++ b/ports.conf
@@ -5,6 +5,7 @@
 10.1.234.28 3306	# mysql
 10.1.234.28 3690	# svnserve
 10.1.234.28 8080	# svn manager only from 10.1.234.30
+10.1.234.28 5555    # docker
 
 10.1.234.29 22		# ssh
 10.1.234.29 8080	# ssmtest only from 10.1.234.30
