--- a/ports.conf
+++ b/ports.conf
@@ -1,19 +1,24 @@
 
 10.1.234.28 22		# ssh
 10.1.234.28 1521	# oracle
-10.1.234.28 3000	# gogs only from 10.1.234.30
+10.1.234.28 2375    # docker
+10.1.234.28 3000	# gogs
 10.1.234.28 3306	# mysql
 10.1.234.28 3690	# svnserve
-10.1.234.28 8080	# svn manager only from 10.1.234.30
-10.1.234.28 5555    # docker
+10.1.234.28 8080	# svn manager
 
 10.1.234.29 22		# ssh
-10.1.234.29 8080	# ssmtest only from 10.1.234.30
+10.1.234.29 2375	# docker
+10.1.234.29 3000	# restful mysql test
+10.1.234.30 8080	# jenkins
+10.1.234.30 8081	# nexus sonatype
+10.1.234.29 8181	# ssmtest only from 10.1.234.30
+10.1.234.29 9000	# sonarqube
 
 10.1.234.30 22		# ssh
 10.1.234.30 80		# nginx, the public port to provide all services
-10.1.234.30 8080	# jenkins only from 127.0.0.1
-10.1.234.30 8081	# nexus sonatype only from 127.0.0.1
+10.1.234.30 2375	# docker
+10.1.234.30 8080	# shipyard
 10.1.234.30 8083	# ssm production only from 127.0.0.1
 10.1.234.30 8100	# openoffice server
 10.1.234.30 9001	# ssh
