--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,45 +4,67 @@
 
 user nginx;
 worker_processes auto;
-error_log /var/log/nginx/error.log;
-pid /run/nginx.pid;
+
+error_log  /var/log/nginx/error.log;
+pid        /run/nginx.pid;
 
 events {
     worker_connections 1024;
 }
 
 http {
+    include       mime.types;
+    default_type  application/octet-stream;
+
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log  /var/log/nginx/access.log  main;
+    access_log    /var/log/nginx/access.log  main;
 
-    sendfile            on;
-    tcp_nopush          on;
-    tcp_nodelay         on;
-    keepalive_timeout   65;
+    sendfile        on;
+    #tcp_nopush     on;
+    tcp_nodelay     on;
+    keepalive_timeout  65
     types_hash_max_size 2048;
 
-    include             /etc/nginx/mime.types;
-    default_type        application/octet-stream;
-
-    # Load modular configuration files from the /etc/nginx/conf.d directory.
-    # See http://nginx.org/en/docs/ngx_core_module.html#include
-    # for more information.
-    include /etc/nginx/conf.d/*.conf;
-
-    charset  utf-8;
+    #gzip  on;
 
     server {
-        listen       80 default_server;
-        listen       [::]:80 default_server;
-        #server_name  _;
+        listen       80;
+        listen       443 ssl;
         server_name  cmcssm.asiainfo.com;
-        root         /usr/share/nginx/html;
+
+        charset  utf-8;
 
         # Load configuration files for the default server block.
         include /etc/nginx/default.d/*.conf;
+
+        ssl_certificate      /etc/nginx/ssl/nginx.crt;
+        ssl_certificate_key  /etc/nginx/ssl/nginx.key;
+
+        #ssl_session_cache    shared:SSL:1m;
+        #ssl_session_timeout  5m;
+
+        #ssl_ciphers  HIGH:!aNULL:!MD5;
+        #ssl_prefer_server_ciphers  on;
+
+        location / {
+            root   html;
+            index  index.html index.htm;
+        }
+
+        error_page  404              /404.html;
+
+        error_page  500 502 503 504  /50x.html;
+        location = /50x.html {
+            root   html;
+        }
+
+        location /messageagent {
+            proxy_pass        http://114.55.52.254:8080/messageagent;
+            proxy_redirect    default;
+        }
 
         location /gogs/ {
             proxy_pass        http://10.1.234.28:3000/;
@@ -51,23 +73,25 @@ http {
         }
 
         location /scm {
+            proxy_pass       http://10.1.234.28:8080;
             proxy_set_header X-Real-IP         $remote_addr;
             proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header Host $http_host;
             client_max_body_size       20m;
             client_body_buffer_size    128k;
-            proxy_pass       http://10.1.234.28:8080;
         }
 
-        location /viewvc {
-            add_header Cache-Control no-store;
-            proxy_pass       http://10.1.234.28:8081/viewvc;
+        location /nexus {
+            proxy_pass        http://10.1.234.30:8081;
+            proxy_set_header  Host $host;
+            proxy_set_header  X-Real-IP $remote_addr;
+            proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
         location /jenkins {
             sendfile off;
-            proxy_pass        http://10.1.234.30:8080/jenkins;
+            proxy_pass        http://192.168.0.3:8080/jenkins;
             proxy_redirect     default;
 
             proxy_set_header   Host             $host;
@@ -89,49 +113,9 @@ http {
             proxy_temp_file_write_size 64k;
         }
 
-        location /nexus {
-            proxy_pass        http://10.1.234.30:8081;
-            proxy_set_header  Host $host;
-            proxy_set_header  X-Real-IP $remote_addr;
-            proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
-
         location /sonarqube {
             proxy_pass        http://10.1.234.29:9000;
             proxy_set_header  X-Forwarded-For $remote_addr;
-        }
-
-        location /ssm {
-            proxy_pass        http://10.1.234.30:8083/ssm;
-            proxy_set_header  X-Forwarded-For $remote_addr;
-        }
-
-        location /sonar374 {
-            proxy_pass        http://10.1.234.30:8084;
-            proxy_set_header  X-Forwarded-For $remote_addr;
-        }
-
-        location /DocSys {
-            proxy_pass        http://10.1.234.30:8085;
-            proxy_set_header  X-Forwarded-For $remote_addr;
-        }
-
-        location /sonarcheck {
-            proxy_pass        http://10.1.234.30:8086;
-            proxy_set_header  X-Forwarded-For $remote_addr;
-        }
-
-        location /ssmtest {
-            proxy_pass        http://10.1.234.29:8080/ssmtest;
-            proxy_set_header  X-Forwarded-For $remote_addr;
-        }
-
-        error_page 404 /404.html;
-            location = /40x.html {
-        }
-
-        error_page 500 502 503 504 /50x.html;
-            location = /50x.html {
         }
     }
 }
