--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -62,6 +62,14 @@ http {
         }
 
         location /messageagent {
+            # https to http
+            #proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            #proxy_set_header Host $http_host;
+            #proxy_set_header X-Forwarded-Proto https;
+            #proxy_redirect   off;
+            #proxy_connect_timeout      240;
+            #proxy_send_timeout         240;
+            #proxy_read_timeout         240;
             proxy_pass        http://114.55.52.254:8080/messageagent;
             proxy_redirect    default;
         }
