--- a/mariadb/my.cnf
+++ b/mariadb/my.cnf
@@ -25,9 +25,10 @@ query_cache_size = 32M
 thread_concurrency = 8
 
 # add by xienan
+default-storage-engine = InnoDB
+lower_case_table_names=1
 max_connections = 500
 open_files_limit = 65535
-default-storage-engine = InnoDB
 innodb_open_files = 500
 innodb_buffer_pool_size = 64M
 innodb_log_buffer_size = 2M
@@ -35,6 +36,7 @@ innodb_write_io_threads = 4
 innodb_read_io_threads = 4
 innodb_thread_concurrency = 0
 innodb_purge_threads = 1
+interactive_timeout=1200
 transaction_isolation = READ-COMMITTED
 init_connect='SET autocommit=0'
 
