--- a/mariadb/my.cnf
+++ b/mariadb/my.cnf
@@ -1,6 +1,7 @@
 [mysqld]
 #datadir=/var/lib/mysql
 #socket=/var/lib/mysql/mysql.sock
+#basedir=/home/mysql/soft/mysql-5.6.30-linux-glibc2.5-x86_64
 datadir=/mariadb/mysql
 socket=/mariadb/mysql/mysql.sock
 # Disabling symbolic-links is recommended to prevent assorted security risks
@@ -25,11 +26,11 @@ query_cache_size = 32M
 thread_concurrency = 8
 
 # add by xienan
-default-storage-engine = InnoDB
+max_connections=500
+default-storage-engine=INNODB
 lower_case_table_names=1
-max_connections = 500
-open_files_limit = 65535
-innodb_open_files = 500
+open_files_limit=65535
+innodb_open_files=500
 innodb_buffer_pool_size = 64M
 innodb_log_buffer_size = 2M
 innodb_write_io_threads = 4
