--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -25,23 +25,23 @@ http {
     sendfile        on;
     #tcp_nopush     on;
     tcp_nodelay     on;
-    keepalive_timeout  65
+    #keepalive_timeout  60
     types_hash_max_size 2048;
 
     #gzip  on;
 
     server {
         listen       80;
-        listen       443 ssl;
-        server_name  cmcssm.asiainfo.com;
+        #listen       443 ssl;
+        server_name  www.yjcloud.com;
 
         charset  utf-8;
 
         # Load configuration files for the default server block.
         include /etc/nginx/default.d/*.conf;
 
-        ssl_certificate      /etc/nginx/ssl/nginx.crt;
-        ssl_certificate_key  /etc/nginx/ssl/nginx.key;
+        #ssl_certificate      /etc/nginx/ssl/nginx.crt;
+        #ssl_certificate_key  /etc/nginx/ssl/nginx.key;
 
         #ssl_session_cache    shared:SSL:1m;
         #ssl_session_timeout  5m;
@@ -61,45 +61,37 @@ http {
             root   html;
         }
 
-        location /messageagent {
-            # https to http
-            #proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            #proxy_set_header Host $http_host;
-            #proxy_set_header X-Forwarded-Proto https;
-            #proxy_redirect   off;
-            #proxy_connect_timeout      240;
-            #proxy_send_timeout         240;
-            #proxy_read_timeout         240;
-            proxy_pass        http://114.55.52.254:8080/messageagent;
+        location /hamster {
+            proxy_pass        http://192.168.100.123:8080/hamster;
+            proxy_redirect    default;
+        }
+
+        location /mongodb {
+            proxy_pass        http://192.168.100.123:28017;
             proxy_redirect    default;
         }
 
         location /gogs/ {
-            proxy_pass        http://10.1.234.28:3000/;
-            client_max_body_size       20m;
-            client_body_buffer_size    128k;
-        }
-
-        location /scm {
-            proxy_pass       http://10.1.234.28:8080;
-            proxy_set_header X-Real-IP         $remote_addr;
-            proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header Host $http_host;
+            proxy_pass        http://192.168.100.123:3000/;
             client_max_body_size       20m;
             client_body_buffer_size    128k;
         }
 
         location /nexus {
-            proxy_pass        http://10.1.234.30:8081;
+            proxy_pass        http://192.168.100.123:8081/nexus;
             proxy_set_header  Host $host;
             proxy_set_header  X-Real-IP $remote_addr;
             proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
-        location /jenkins {
+        location /redis/ {
+            proxy_pass        http://192.168.100.123:8082/;
+            proxy_redirect    default;
+        }
+
+        location @jenkins {
             sendfile off;
-            proxy_pass        http://192.168.0.3:8080/jenkins;
+            proxy_pass        http://192.168.100.123:8080;
             proxy_redirect     default;
 
             proxy_set_header   Host             $host;
@@ -121,9 +113,14 @@ http {
             proxy_temp_file_write_size 64k;
         }
 
-        location /sonarqube {
-            proxy_pass        http://10.1.234.29:9000;
-            proxy_set_header  X-Forwarded-For $remote_addr;
+        location /jenkins {
+            try_files $uri @jenkins;
         }
+
+        location /solr {
+            proxy_pass        http://192.168.100.123:8983;
+            proxy_redirect    default;
+        }
+
     }
 }
